Actualizaciones del proyecto

--- a/applications/Usuarios/templates/login/login.html
+++ b/applications/Usuarios/templates/login/login.html
@@ -232,7 +232,7 @@
             </div>
             
             <div class="login-text">
-                ¿No tienes una cuenta? <a href="{% url 'signup' %}">Regístrate</a>
+                ¿No tienes una cuenta? <a href="{% url 'register' %}">Regístrate</a>
             </div>
             <p class="login-text">
                 ¿Olvidaste tu contraseña? <a href="#">Recuperar Contraseña</a>
