--- a/applications/home/templates/index.html
+++ b/applications/home/templates/index.html
@@ -223,7 +223,7 @@ header {
     <p id="Nom">NUTRIET</p>
     <p id="eslogan">"Come bien vive feliz"</p>
     <a href="{% url 'login' %}"><button id="init_sec">Iniciar sesión</button></a>
-    <a href="{% url 'signup' %}"><button id="register">Registrarse</button></a>
+    <a href="{% url 'register' %}"><button id="register">Registrarse</button></a>
   </section>
 
   <!-- footer informacion y contactos -->
