Actualizaciones del proyecto

--- a/applications/Usuarios/templates/login/login.html
+++ b/applications/Usuarios/templates/login/login.html
@@ -235,7 +235,7 @@
                 ¿No tienes una cuenta? <a href="{% url 'register' %}">Regístrate</a>
             </div>
             <p class="login-text">
-                ¿Olvidaste tu contraseña? <a href="#">Recuperar Contraseña</a>
+                ¿Olvidaste tu contraseña? <a href="{% url 'recuperar' %}">Recuperar Contraseña</a>
             </p>
 
         </div>
