--- a/applications/Usuarios/templates/recuperar/recuperar_contraseña.html
+++ b/applications/Usuarios/templates/recuperar/recuperar_contraseña.html
@@ -128,20 +128,25 @@
 </form>
 
       <!-- 🔔 Mostrar mensajes del backend -->
-{% if messages %}
-  <ul style="margin-top:15px;">
-    {% for message in messages %}
-      <li class="{% if message.tags == 'error' %}error-msg{% else %}success-msg{% endif %}">
-        {{ message }}
-      </li>
-    {% endfor %}
-  </ul>
-{% endif %}
     </div>
 
     <div class="logo-container">
       <img src="{% static 'images/logo.png' %}" alt="Nutriet logo" class="logo">
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+{% for message in messages %}
+    {% if message.tags == 'error' %}
+        <script>
+            // Muestra un SweetAlert para un mensaje de error
+            Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: "{{ message }}", // Contenido del mensaje: "El correo no está registrado."
+            });
+        </script>
+    {% endif %}
+{% endfor %}
 </body>
 </html>
